--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
+        pip install PyQt5
         
     - name: Build executable
       run: |
-        pyinstaller --onefile --windowed --icon=favicon.ico main.py
+        pyinstaller --onefile --windowed --icon=favicon.ico --hidden-import=PyQt5.QtCore --hidden-import=PyQt5.QtGui --hidden-import=PyQt5.QtWidgets main.py
         
     - name: Upload executable
       uses: actions/upload-artifact@v4
