--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,14 @@ jobs:
         pip install pyinstaller
         pip install PyQt5
         pip install python-docx
+        pip install docxtpl
         pip install openpyxl
         pip install pillow
         pip install requests
         
     - name: Build executable
       run: |
-        pyinstaller --onefile --windowed --icon=favicon.ico --hidden-import=PyQt5.QtCore --hidden-import=PyQt5.QtGui --hidden-import=PyQt5.QtWidgets --hidden-import=docx main.py
+        pyinstaller --onefile --windowed --icon=favicon.ico --hidden-import=PyQt5.QtCore --hidden-import=PyQt5.QtGui --hidden-import=PyQt5.QtWidgets --hidden-import=docx --hidden-import=docxtpl main.py
         
     - name: Upload executable
       uses: actions/upload-artifact@v4
