--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         
     - name: Build executable
       run: |
-        pyinstaller --onefile --windowed --icon=favicon.ico --hidden-import=PyQt5.QtCore --hidden-import=PyQt5.QtGui --hidden-import=PyQt5.QtWidgets --hidden-import=docx --hidden-import=docxtpl main.py
+        pyinstaller --onefile --windowed --icon=favicon.ico --add-data "elas.jpg;." --hidden-import=PyQt5.QtCore --hidden-import=PyQt5.QtGui --hidden-import=PyQt5.QtWidgets --hidden-import=docx --hidden-import=docxtpl main.py
         
     - name: Upload executable
       uses: actions/upload-artifact@v4
