--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -8,27 +8,35 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install everything
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyinstaller PyQt5 python-docx docxtpl openpyxl pillow requests
-
-      - name: Build the .exe
-        run: |
-          pyinstaller --onefile --windowed --icon=favicon.ico --add-data "elas.jpg;." main.py
-
-      - name: Upload the .exe
-        uses: actions/upload-artifact@v4
-        with:
-          name: Police-Academy-EXE
-          path: dist/main.exe
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller PyQt5 python-docx docxtpl openpyxl pillow requests
+        
+    - name: Build the .exe
+      run: |
+        pyinstaller --onefile --windowed --icon=favicon.ico \
+          --add-data "elas.jpg;." \
+          --add-data "index.html;." \
+          --hidden-import=PyQt5.QtCore \
+          --hidden-import=PyQt5.QtGui \
+          --hidden-import=PyQt5.QtWidgets \
+          --hidden-import=docx \
+          --hidden-import=docxtpl \
+          main.py
+        
+    - name: Upload the .exe
+      uses: actions/upload-artifact@v4
+      with:
+        name: Police-Academy-EXE
+        path: dist/main.exe
